force-app/main/default/objects/Avoir__c/fields/Statuts__c.field-meta.xml
<CustomField>
    <fullName>Statuts__c</fullName>
    <description>Champs représenté le Status de l&apos;avoir</description>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Cours</fullName>
            </value>
            <value>
                <fullName>Régulariser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>