force-app/main/default/objects/Avoir__c/listViews/Avoir_Statuts.listView-meta.xml
<ListView>
    <fullName>Avoir_Statuts</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>Statuts__c</columns>
    <filterScope>Everything</filterScope>
    <label>Avoir Statut</label>
</ListView>