force-app/main/default/objects/Avoir__c/listViews/Avoirs.listView-meta.xml
<ListView>
    <fullName>Avoirs</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>Statuts__c</columns>
    <filterScope>Mine</filterScope>
    <label>Avoirs</label>
</ListView>